--- a/style.css
+++ b/style.css
@@ -167,13 +167,10 @@ a.green {
 
   width: 100%;
   height: 100vh;
-  gap: 15px;
-  padding: 90px 0px;
-  /* margin-top: 40px; */
+  padding: 100px 0px;
 }
 .page2-grid img:nth-child(1) {
-  grid-row: 1/4;
-  /* margin: 10px 10px; */
+  grid-row: 1/2;
   justify-self: center;
   align-self: start;
   height: 200px;
@@ -183,7 +180,7 @@ a.green {
 .page2-grid h1 {
   grid-column: 2/4;
   justify-self: start;
-  align-self: end;
+  align-self: center;
   padding: 20px 0;
 }
 
@@ -202,10 +199,8 @@ a.green {
   grid-row: 2/4;
   justify-self: start;
   align-self: start;
-  width: 90%;
-  /* height: 90%; */
+  width: 95%;
   padding-top: 40px;
-
   font-size: 18px;
   line-height: 2rem;
 }
@@ -213,10 +208,10 @@ a.green {
 .page2-grid img:nth-child(4) {
   grid-column: 2/3;
   grid-row: 2/4;
-  height: 160px;
-  width: 160px;
+  height: 180px;
+  width: 180px;
   border-radius: 30px;
-  justify-self: end;
+  justify-self: center;
   align-self: start;
 }
 
@@ -292,7 +287,6 @@ a.green {
 
 .page3 {
   background-color: var(--smokeWhiteColor);
-  /* margin: 160px 30px; */
 }
 
 .page3-grid {
@@ -310,7 +304,7 @@ a.green {
 
 .page3-grid img:nth-child(1) {
   grid-row: 1/2;
-  justify-self: center;
+  justify-self: start;
   align-self: center;
   height: 200px;
   width: 200px;
@@ -318,8 +312,8 @@ a.green {
 .page3-grid h1:nth-child(2) {
   grid-column: 2/4;
   justify-self: start;
-  align-self: start;
-  padding: 20px;
+  align-self: center;
+  padding: 20px 0;
 }
 
 .page3-grid img:nth-child(3) {
@@ -735,13 +729,17 @@ a.green {
 
 @media only screen and (max-width: 600px) {
   .page2 {
-    height: 850px;
+    height: 700px;
+  }
+  .page2-grid {
+    gap: 8px;
   }
 
   .page2-grid img:nth-child(1) {
     grid-row: 1/2;
     height: 100px;
     width: 100px;
+    justify-self: start;
   }
 
   .page2-grid h1 {
