--- a/style.css
+++ b/style.css
@@ -17,6 +17,7 @@ html {
   scroll-behavior: smooth;
   width: 100vw;
   overflow-y: auto;
+  overflow-x: hidden;
 }
 .wrapper {
   width: 100vw;
@@ -77,7 +78,7 @@ a.green {
 .flex-page1 img {
   position: relative;
   width: 100%;
-  height: 90%;
+  height: 100%;
 }
 
 .flex-page1 div {
@@ -99,7 +100,7 @@ a.green {
   width: 100vw;
   height: 400px;
   z-index: 0;
-  margin: 0 auto;
+  margin: 0px auto;
 }
 .between-side1-grid {
   display: grid;
@@ -157,16 +158,16 @@ a.green {
 
 .page2 {
   background-color: var(--smokeWhiteColor);
-  height: 800px;
+  min-height: 900px;
 }
 
 .page2-grid {
   display: grid;
   grid-template-columns: 0.2fr 0.4fr 1fr 0.2fr;
-  grid-template-rows: repeat(3, auto);
+  grid-template-rows: repeat(4, auto);
 
   width: 100%;
-  height: 100vh;
+  min-height: 100vh;
   padding: 100px 0px;
 }
 .page2-grid img:nth-child(1) {
@@ -209,7 +210,7 @@ a.green {
   grid-column: 2/3;
   grid-row: 2/4;
   height: 180px;
-  width: 180px;
+  /* width: 180px; */
   border-radius: 30px;
   justify-self: center;
   align-self: start;
@@ -224,12 +225,30 @@ a.green {
   align-self: end;
 }
 
+.page2-grid button {
+  grid-column: 3/4;
+  grid-row: 4/5;
+  height: 40px;
+  width: 170px;
+  border-radius: 10px;
+  /* color: #292929; */
+  border: none;
+  background-color: var(--light-orange);
+  justify-self: center;
+  margin-top: 20px;
+  cursor: pointer;
+}
+.page2-grid button a {
+  text-decoration: none;
+  color: #292929;
+}
+
 .between-side2 {
   background-color: var(--light-green);
   z-index: 0;
   width: 100vw;
   height: 400px;
-  margin: 100px auto;
+  margin: 0px auto;
 }
 .between-side2-grid {
   display: grid;
@@ -286,7 +305,8 @@ a.green {
 }
 
 .page3 {
-  background-color: var(--smokeWhiteColor);
+  background: url("./pic/background-Skills.png");
+  border: 2px solid red;
 }
 
 .page3-grid {
@@ -299,7 +319,7 @@ a.green {
   width: 100%;
 
   padding: 90px 0px;
-  margin-top: 40px;
+  /* margin-top: 40px; */
 }
 
 .page3-grid img:nth-child(1) {
@@ -412,7 +432,7 @@ a.green {
 
 .page4 {
   background-color: var(--smokeWhiteColor);
-  margin: 50px 0px;
+  /* margin: 50px 0px; */
   padding-top: 120px;
 }
 /* Slideshow container */
@@ -522,21 +542,23 @@ a.green {
 }
 .btn-flex {
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
 }
 .info-project-flex {
   display: flex;
-  justify-content: start;
+  justify-content: center;
 }
 .mySlides button {
   padding: 10px 12px;
   border-radius: 8px;
+  margin-bottom: 10px;
   /* float: right; */
 }
 .mySlides label {
   border: 2px solid black;
   padding: 10px 12px;
-  /* margin-left: 15px; */
+  margin-bottom: 10px;
+  margin-left: 15px;
   border-radius: 8px;
 }
 
@@ -729,14 +751,16 @@ a.green {
 
 @media only screen and (max-width: 600px) {
   .page2 {
-    height: 700px;
+    display: flex;
+    flex-direction: column;
+    min-height: 700px;
   }
   .page2-grid {
     gap: 8px;
   }
 
   .page2-grid img:nth-child(1) {
-    grid-row: 1/2;
+    /* grid-row: 1/2; */
     height: 100px;
     width: 100px;
     justify-self: start;
